--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -13,6 +13,7 @@
 		crossorigin="anonymous">
 	</script>
 	<link href="/oink_fft/css/theme.css" rel="stylesheet">
+	<link href="/oink_fft/css/about.css" rel="stylesheet">
 
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
 </head>
@@ -104,64 +105,6 @@
 		</section>
     </div>
     <section class="snappable" id="section_about">
-
-	  <style>
-        p {
-            line-height: 14px;
-            margin: 0px;
-            text-align: justify;
-        }
-
-        #header {
-            margin: auto auto;
-            width: 90%;
-            border-radius: 6px;
-        }
-
-        #header_row {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .header_row_item {
-            margin-right: 20px;
-        }
-
-        .info {
-            margin: 10px;
-            width: 280px;
-        }
-
-        #profile_div {
-            display: flex;
-            flex-direction: row;
-            width: 400px;
-            border-right: 1px solid black;
-            padding-right: 20px;
-            filter: drop-shadow(1px 1px 10px rgba(0,0,0,0.5));
-        }
-
-        #profile {
-            border-radius: 50%;
-            height: 200px; 
-            width: 200px;
-            border: 1px solid white;
-        }
-
-        .links {
-            width: 30px;
-            height: 30px;
-            mix-blend-mode: multiply;
-            cursor: pointer;
-            filter: grayscale(100%) drop-shadow(1px 1px 10px rgba(0,0,0,0.5));
-        }
- 
-        a {
-            text-decoration: none;
-        }
-
-      </style>
-
        <div id="header">
 		 <div id="header_row">
 		    <div class="header_row_item">
