--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -105,9 +105,13 @@
 		</section>
     </div>
     <section class="snappable" id="section_about">
-       <div id="header">
-		 <div id="header_row">
-		    <div class="header_row_item">
+       <div id="about">
+           
+       </div>
+
+       <div id="dev">
+		 <div id="dev_row">
+		    <div class="dev_row_item">
 		         <h1>
 		            About me:
 		         </h1>
@@ -124,8 +128,8 @@
 		            </div>
 		         </div>
 		    </div>
-		    <div class="header_row_item" style="width: 300px">
-		        <div style="border-bottom: solid 1px black;">
+		    <div class="dev_row_item" style="width: 300px">
+		        <div style="border-bottom: solid 1px white;">
 		         <h1>Links:</h1>
 
 		           <a href="https://www.sch1z0.net">
