--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -105,6 +105,10 @@
 		</section>
     </div>
     <section class="snappable" id="section_about">
+       <h1>
+           About this Project
+       </h1>
+
        <div id="about">
            
        </div>
@@ -177,6 +181,10 @@
 		     </div>
 		   </div>
 		</div>
+
+		<div id="imprint">
+            © 2023 • Sebastian Prusak
+        </div>
 
     </div>
 
