--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -132,7 +132,7 @@
 		            </div>
 		         </div>
 		    </div>
-		    <div class="dev_row_item" style="width: 300px">
+		    <div class="dev_row_item" style="width: fit-content;">
 		        <div style="border-bottom: solid 1px white;">
 		         <h1>Links:</h1>
 
@@ -152,12 +152,12 @@
 		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/High-contrast-emblem-mail.svg"/>
 		           </a> 
 		        </div>
-		        <div>
+		        <div style="max-width: 250px;">
 		           <h1>Donate:</h1>
 		           <div style="text-align: justify;">
 		           You can help me through my life with a small donation on Paypal or buymeacoffee.com, if you like my work.
-		         <div style="display:flex; flex-direction: row; margin-left: 10px; margin-top: 10px">
-		           <div id="donate-button-container" style="transform:scale(1.2);  margin-top: 14px;">
+		         <div style="display:flex; flex-direction: row; margin-left: 10px;">
+		           <div id="donate-button-container" style="transform:scale(1.0);  margin-top: 14px;">
 		            <div id="donate-button"></div>
 		               <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
 		               <script>
@@ -173,7 +173,7 @@
 		               </script>
 		            </div>
 
-		        <div id="coffee-button-container" style="transform:scale(0.7); margin-left: 20px;">
+		        <div id="coffee-button-container" style="transform:scale(0.5); margin-left: 20px;">
 		           <a href="https://www.buymeacoffee.com/sch1z0"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=sch1z0&button_colour=ffffff&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00" /></a>
 		        </div>
 		       </div>
