--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -115,7 +115,7 @@
 
        <div id="dev">
 		 <div id="dev_row">
-		    <div class="dev_row_item">
+		    <div class="dev_row_item" style="width: fit-content;">
 		         <h1>
 		            About me:
 		         </h1>
@@ -132,7 +132,7 @@
 		            </div>
 		         </div>
 		    </div>
-		    <div class="dev_row_item" style="width: fit-content;">
+		    <div class="dev_row_item" style="max-width: 250px;">
 		        <div style="border-bottom: solid 1px white;">
 		         <h1>Links:</h1>
 
@@ -152,7 +152,7 @@
 		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/High-contrast-emblem-mail.svg"/>
 		           </a> 
 		        </div>
-		        <div style="max-width: 250px;">
+		        <div>
 		           <h1>Donate:</h1>
 		           <div style="text-align: justify;">
 		           You can help me through my life with a small donation on Paypal or buymeacoffee.com, if you like my work.
