--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -375,7 +375,7 @@
 
         }
         
-        let window.benchmarking = false;
+        window.benchmarking = false;
 		// Function to handle scrolling
 		window.addEventListener('scroll', function(event) {
 		   if(snapping || window.benchmarking){ return; }
