--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -378,7 +378,7 @@
         window.benchmarking = false;
 		// Function to handle scrolling
 		window.addEventListener('scroll', function(event) {
-		   if(snapping || window.benchmarking){ return; }
+		   if(snapping){ return; }
 		   event.preventDefault();
 		   event.stopPropagation();
 		});
