--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -270,7 +270,6 @@
 
 	        // During Snapping
 	        blockWheel = true;
-	        console.log("start snapping");
 	        updateCurrentSection(section);
 
 	        // Scroll to the captured offset
@@ -378,6 +377,11 @@
         window.benchmarking = false;
 		// Function to handle scrolling
 		window.addEventListener('scroll', function(event) {
+		   if(window.benchmarking){
+		  	  event.preventDefault(); 
+		  	  event.stopPropagation();
+		  	  return;
+		   }
 		   if(snapping){ return; }
 		   event.preventDefault();
 		   event.stopPropagation();
@@ -385,7 +389,12 @@
 
 	    // Prevent scrolling
 		window.addEventListener('wheel', function(event) {
-		  if(blockWheel || window.benchmarking){ 
+		  if(window.benchmarking){
+		  	  event.preventDefault(); 
+		  	  event.stopPropagation();
+		  	  return;
+		  }
+		  if(blockWheel){ 
 		  	  event.preventDefault(); 
 		  }else{
               if(snapping){ return; }
