--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -170,7 +170,7 @@
 		           <h1>Donate:</h1>
 		           <div style="text-align: justify;">
 		           You can help me through my life with a small donation on Paypal or buymeacoffee.com, if you like my work.
-		         <div style="display:flex; flex-direction: row; margin-left: 10px;">
+		         <div style="display: grid; grid-template-columns: 90px 90px; margin-left: 10px;">
 		           <div id="donate-button-container" style="transform:scale(1.0);  margin-top: 14px;">
 		            <div id="donate-button"></div>
 		               <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
