--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -203,7 +203,7 @@
     </div>
 
     </section>
-	<div id="footer">
+	<div id="footer" class="active">
 	    <div id="anchors">
 	    	<a href="#section_main"   class="anchor">Benchmark</a>
 	    	<a href="#section_intro"  class="anchor">Intro</a>
