render title in index.html

--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -22,6 +22,11 @@
 		<div class="giphy-round">
     	   <iframe src="https://giphy.com/embed/2aUH5BAyaNd60" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
+        <div id="title_div>">
+        	<h1 id="title">OINK FFT</h1>
+        	<h2 id="subtitle">the oinkiest FFT in the web</h2>
+        </div>
+
 	    <div id="root">
 	    </div>
 	</section>
