--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -5,6 +5,12 @@
 	<link rel="icon" type="image/png" href="/oink_fft/favicon/favicon-96x96.png"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1"/>
 	<meta name="OINK FFT" content="The oinkiest FFT in the web"/>
+    <meta name="description" content="Welcome to OINK FFT - your ultimate destination for Fast Fourier Transform (FFT) in JavaScript. Whether you're a beginner exploring signal processing concepts or a seasoned developer building advanced audio visualizations, OINK FFT provides a simple yet powerful solution to elevate your projects.
+
+With OINK FFT, you'll discover a quick and dirty FFT implementation designed for simplicity and speed. Say goodbye to complex algorithms and hello to efficient frequency analysis. Our JavaScript-based solution leverages WebAssembly (WASM) and optimized mathematical Fourier Intrinsics to deliver competitive performance without sacrificing ease of use.
+
+Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ideal for rapid prototyping, experimentation, and production-grade applications alike. Whether you're processing audio signals, analyzing frequency spectra, or implementing real-time visualizations, OINK FFT empowers you to unlock the full potential of Fourier analysis in the modern web environment."> 
+
 	<title>OINK FFT</title>
 
 	<script
