--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -146,7 +146,7 @@ Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ide
 		         </h1>
 
 		         <div id="profile_div">
-		            <img id="profile" src="../profile.png" />
+		            <img id="profile" src="../profile.png" alt="profile image of the developer of this site"/>
 		            <div>
 		            <p style="padding-left:0px;"> Hi, I'm Sebastian. </p>
 		            <p style="padding-left:10px;"> I am diagnosed with paranoid schizophrenia. </p>
@@ -162,19 +162,19 @@ Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ide
 		         <h1>Links:</h1>
 
 		           <a href="https://www.sch1z0.net">
-		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg"/>
+		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg"  alt="icon showing a home logo"/>
 		           </a>
 
 		           <a href="https://github.com/sch1z0net">
-		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1280px-GitHub_Invertocat_Logo.svg.png"/>
+		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1280px-GitHub_Invertocat_Logo.svg.png" alt="icon showing the github logo"/>
 		           </a>
 
 		           <a href="https://www.instagram.com/sch1z0net/">
-		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/2/27/CIS-A2K_Instagram_Icon_%28Black%29.svg"/>
+		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/2/27/CIS-A2K_Instagram_Icon_%28Black%29.svg" alt="icon showing the instagram logo"/>
 		           </a>
 
 		           <a href="mailto:sebastianprusak@sch1z0.net">
-		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/High-contrast-emblem-mail.svg"/>
+		            <img class="links" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/High-contrast-emblem-mail.svg"   alt="icon showing a mail logo"/>
 		           </a> 
 		        </div>
 		        <div>
@@ -199,7 +199,7 @@ Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ide
 		            </div>
 
 		        <div id="coffee-button-container" style="transform:scale(0.5); margin-left: 10px;">
-		           <a href="https://www.buymeacoffee.com/sch1z0"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=sch1z0&button_colour=ffffff&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00" /></a>
+		           <a href="https://www.buymeacoffee.com/sch1z0"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=sch1z0&button_colour=ffffff&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00"  alt="icon showing the 'buy me a coffee' logo"/></a>
 		        </div>
 		       </div>
 
