--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -454,6 +454,8 @@ Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ide
 
 		if(window.mobileCheck()){
            $("#footer").addClass("mobile");
+           $("#about").addClass("mobile");
+           $("#dev").addClass("mobile");
         }
     });
 	</script>
