--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -456,6 +456,7 @@ Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ide
            $("#footer").addClass("mobile");
            $("#about").addClass("mobile");
            $("#dev").addClass("mobile");
+           $("section").addClass("mobile");
         }
     });
 	</script>
