--- a/oink_fft/debug/index.html
+++ b/oink_fft/debug/index.html
@@ -461,7 +461,7 @@ Why choose OINK FFT? Our library prioritizes speed and simplicity, making it ide
     });
 	</script>
 
-    <script type="module" src="/oink_fft/js/main.js" defer></script>
+    <script type="module" src="/oink_fft/debug/js/main.js" defer></script>
 
 </body>
 </html>
